--- a/sam/website/api.cfn.yaml
+++ b/sam/website/api.cfn.yaml
@@ -21,22 +21,20 @@ Parameters:
     Type: Number
     Default: 14
 
+  FirehoseImportStreamName:
+    Description: "Firehose analytics event import stream name."
+    Type: String
+
 Outputs:
-  HTTPAPIEndpoint:
-    Description: The API Gateway endpoint address of the REST API.
-    Value: !Sub 'https://${HttpAPI}.execute-api.${AWS::Region}.${AWS::URLSuffix}/'
   APIFunctionLogGroup:
     Description: The log group which stores api lambda logs.
     Value: !Ref APIFunctionLogGroup
-  AuthorizerFunctionLogGroup:
-    Description: The log group which stores authorizer lambda logs.
-    Value: !Ref AuthorizerFunctionLogGroup
-  HTTPAPI:
-    Description: The http API.
-    Value: !Ref HttpAPI
-  HTTPAPIAccessLogGroup:
-    Description: The log group which stores api gateway access logs.
-    Value: !Ref HTTPAPIAccessLogGroup
+  APIFunctionUrl:
+    Description: The API Function URL.
+    Value: !GetAtt APIFunctionUrl.FunctionUrl
+  APIFunctionArn:
+    Description: The API Function ARN.
+    Value: !GetAtt APIFunctionUrl.FunctionArn
 
 Globals:
   Function:
@@ -44,43 +42,28 @@ Globals:
     Architectures:
       - arm64
     Timeout: 3
-    MemorySize: 256
+    MemorySize: 128
+    Tracing: Active
     Environment:
       Variables:
         STAGE: !Ref Stage
         BRANCH: !Ref Branch
 
 Resources:
-  HTTPAPIAccessLogGroup:
-    Type: AWS::Logs::LogGroup
-    Properties:
-      LogGroupName: !Sub "/aws/apigateway/AccessLog-${AppName}-${Stage}-${Branch}"
-      RetentionInDays: !Ref LogRetention
-
-  HttpAPI:
-    Type: AWS::Serverless::HttpApi
-    Properties:
-      Auth:
-        Authorizers:
-          APILambdaAuthorizer:
-            AuthorizerPayloadFormatVersion: '2.0'
-            EnableSimpleResponses: true
-            FunctionArn: !GetAtt AuthorizerFunction.Arn
-            FunctionInvokeRole: !GetAtt AuthorizerFunctionRole.Arn
-        DefaultAuthorizer: APILambdaAuthorizer
-      DefaultRouteSettings:
-        ThrottlingBurstLimit: 10
-        ThrottlingRateLimit: 10
-        DetailedMetricsEnabled: true
-      AccessLogSettings:
-        DestinationArn: !GetAtt HTTPAPIAccessLogGroup.Arn
-        Format: "$context.requestId $context.domainName $context.httpMethod $context.identity.sourceIp $context.path $context.protocol $context.requestId $context.requestTime $context.status $context.responseLength $context.responseLatency $context.integrationLatency"
-
   APIFunction:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: ../../dist/analytics-api-lambda.zip
       Handler: bootstrap
+      FunctionUrlConfig:
+        AuthType: AWS_IAM
+        InvokeMode: RESPONSE_STREAM
+      Environment:
+        Variables:
+          DELIVERY_STREAM_NAME: !Ref FirehoseImportStreamName
+      Policies:
+        - FirehoseWritePolicy:
+            DeliveryStreamName: !Ref FirehoseImportStreamName
 
   APIFunctionLogGroup:
     Type: AWS::Logs::LogGroup
@@ -88,40 +71,16 @@ Resources:
       LogGroupName: !Sub "/aws/lambda/${APIFunction}"
       RetentionInDays: !Ref LogRetention
 
-  AuthorizerFunction:
-    Type: AWS::Serverless::Function
+  APIFunctionFunctionUrlParam:
+    Type: AWS::SSM::Parameter
     Properties:
-      CodeUri: ../../dist/api-authorizer-lambda.zip
-      Handler: bootstrap
+      Name: !Sub "/config/${Stage}/${Branch}/${AppName}/analytics_api_function_url"
+      Type: String
+      Value: !GetAtt APIFunctionUrl.FunctionUrl
 
-  AuthorizerFunctionLogGroup:
-    Type: AWS::Logs::LogGroup
+  APIFunctionFunctionArnParam:
+    Type: AWS::SSM::Parameter
     Properties:
-      LogGroupName: !Sub "/aws/lambda/${AuthorizerFunction}"
-      RetentionInDays: !Ref LogRetention
-
-  AuthorizerInvokeRole:
-    Type: "AWS::IAM::Role"
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: "2012-10-17"
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service:
-                - apigateway.amazonaws.com
-            Action:
-              - "sts:AssumeRole"
-
-  AuthorizerInvokePolicy:
-    Type: "AWS::IAM::Policy"
-    Properties:
-      PolicyName: "AuthorizerInvokePolicy"
-      PolicyDocument:
-        Version: "2012-10-17"
-        Statement:
-          - Effect: "Allow"
-            Action: "lambda:InvokeFunction"
-            Resource: !GetAtt AuthorizerFunction.Arn
-      Roles:
-        - Ref: "AuthorizerInvokeRole"
+      Name: !Sub "/config/${Stage}/${Branch}/${AppName}/analytics_api_function_arn"
+      Type: String
+      Value: !GetAtt APIFunctionUrl.FunctionArn
